--- a/src/components/Sidebar/components/Submenu/Submenu.module.scss
+++ b/src/components/Sidebar/components/Submenu/Submenu.module.scss
@@ -6,7 +6,7 @@
 .submenu {
   background: var(--steel-10);
   position: absolute;
-  z-index: 10001;
+  z-index: var(--z-sidebar);
   display: flex;
   flex-direction: column;
   width: var(--submenu-width);
